--- a/src/assets/styles/module/main.scss
+++ b/src/assets/styles/module/main.scss
@@ -646,6 +646,24 @@ $function_bar-height: 40px;
     }
 
     .mhwc-status {
+        .mhwc-icon {
+            display: inline-block;
+            margin-left: 2px;
+            width: 20px;
+            height: 20px;
+            float: right;
+            line-height: 20px;
+            text-align: center;
+            color: white;
+            background-color: #ccc;
+
+            @include border-radius(3px);
+
+            &:hover {
+                background-color: #666;
+            }
+        }
+
         .mhwc-item {
             margin: 5px 5px 5px 10px;
             padding: 5px;
@@ -657,6 +675,10 @@ $function_bar-height: 40px;
                 line-height: 33px;
 
                 @include nowrap();
+
+                .mhwc-icon {
+                    margin-top: 6.5px;
+                }
             }
 
             .mhwc-value {
