--- a/src/assets/styles/module/main.scss
+++ b/src/assets/styles/module/main.scss
@@ -377,7 +377,17 @@ $function_bar-height: 40px;
 
                 }
 
+                // 等級
                 td:nth-child(2) {
+
+                }
+
+                // 說明
+                td:nth-child(3) {
+
+                }
+
+                td:nth-child(4) {
                     padding-right: 5px;
                     text-align: right;
                 }
