--- a/src/assets/styles/module/main.scss
+++ b/src/assets/styles/module/main.scss
@@ -111,6 +111,26 @@ $function_bar-height: 40px;
     }
 }
 
+@mixin mhwc-icon() {
+    .mhwc-icon {
+        display: inline-block;
+        margin-left: 2px;
+        width: 20px;
+        height: 20px;
+        float: right;
+        line-height: 20px;
+        text-align: center;
+        color: white;
+        background-color: #ccc;
+
+        @include border-radius(3px);
+
+        &:hover {
+            background-color: #666;
+        }
+    }
+}
+
 .mhwc-selector {
     position: fixed;
     top: 20px + $header-height;
@@ -141,23 +161,7 @@ $function_bar-height: 40px;
         }
     }
 
-    .mhwc-icon {
-        display: inline-block;
-        margin-left: 2px;
-        width: 20px;
-        height: 20px;
-        float: right;
-        line-height: 20px;
-        text-align: center;
-        color: white;
-        background-color: #ccc;
-
-        @include border-radius(3px);
-
-        &:hover {
-            background-color: #666;
-        }
-    }
+    @include mhwc-icon();
 
     .mhwc-list {
         position: absolute;
@@ -524,52 +528,56 @@ $function_bar-height: 40px;
             }
         }
 
-        .mhwc-skill_item {
+        .mhwc-item {
             margin: 5px 5px 5px 10px;
             padding: 5px;
             border: 1px solid #333;
-            height: 60px;
-            line-height: 50px;
 
             @include border-radius(5px);
 
-            &:hover {
-                background-color: #eee;
-            }
-        }
+            .mhwc-name {
+                line-height: 50px;
 
-        .mhwc-skill_name {
+                @include mhwc-icon();
 
-        }
+                .mhwc-icons_bundle {
+                    float: right;
 
-        .mhwc-skill_level {
+                    .mhwc-icon {
+                        float: none;
+                    }
+                }
 
-        }
-    }
+                .mhwc-level_control {
 
-    > .mhwc-skills {
-        .mhwc-skill_item {
-            > div:nth-child(1) {
-                line-height: 25px;
-                text-align: center;
-            }
+                }
 
-            > div:nth-child(2) {
-                padding: 0 5px;
+                .mhwc-position_control {
+                    padding-top: 2px;
 
-                span {
-                    @include nowrap();
+                    .mhwc-icon {
+                        display: block;
+                        float: none;
+
+                        &:nth-child(1) {
+                            margin-bottom: 2px;
+                        }
+                    }
+                }
+
+                .mhwc-skill_remove {
+
                 }
             }
 
-            > div:nth-child(3) {
-                text-align: center;
-            }
+            .mhwc-value {
+                padding: 5px;
+                border: 1px solid #333;
 
-            > div:nth-child(4) {
-                text-align: center;
+                @include border-radius(5px);
             }
         }
+
     }
 
     > .mhwc-bundles,
@@ -605,23 +613,7 @@ $function_bar-height: 40px;
             }
         }
 
-        .mhwc-icon {
-            display: inline-block;
-            margin-left: 2px;
-            width: 20px;
-            height: 20px;
-            float: right;
-            line-height: 20px;
-            text-align: center;
-            color: white;
-            background-color: #ccc;
-
-            @include border-radius(3px);
-
-            &:hover {
-                background-color: #666;
-            }
-        }
+        @include mhwc-icon();
 
         .mhwc-equip {
             margin: 5px 5px 5px 10px;
@@ -730,23 +722,7 @@ $function_bar-height: 40px;
     }
 
     > .mhwc-status {
-        .mhwc-icon {
-            display: inline-block;
-            margin-left: 2px;
-            width: 20px;
-            height: 20px;
-            float: right;
-            line-height: 20px;
-            text-align: center;
-            color: white;
-            background-color: #ccc;
-
-            @include border-radius(3px);
-
-            &:hover {
-                background-color: #666;
-            }
-        }
+        @include mhwc-icon();
 
         .mhwc-item {
             margin: 5px 5px 5px 10px;
