1. udpate charms json 2. update main app 3. update base64 lib

--- a/src/assets/styles/module/main.scss
+++ b/src/assets/styles/module/main.scss
@@ -20,8 +20,13 @@ $function_bar-height: 40px;
     padding: 0 10px;
     height: $header-height;
 
-    > div {
+    > a {
         margin: 0 auto;
+        color: #333;
+
+        &:hover {
+            color: #666;
+        }
     }
 
     h1 {
