--- a/src/assets/styles/module/main.scss
+++ b/src/assets/styles/module/main.scss
@@ -71,7 +71,7 @@ $function_bar-height: 40px;
     }
 }
 
-@mixin mhwc-sharpness() {
+.mhwc-sharpness {
     .mhwc-bar {
         position: relative;
         border: 1px solid black;
@@ -129,23 +129,34 @@ $function_bar-height: 40px;
     }
 }
 
-@mixin mhwc-icon() {
-    .mhwc-icon {
-        display: inline-block;
-        margin-left: 2px;
-        width: 20px;
-        height: 20px;
-        float: right;
-        line-height: 20px;
-        text-align: center;
-        color: white;
-        background-color: #ccc;
+.mhwc-icon {
+    display: inline-block;
+    margin-left: 2px;
+    width: 20px;
+    height: 20px;
+    float: right;
+    line-height: 20px;
+    text-align: center;
+    color: white;
+    background-color: #ccc;
 
-        @include border-radius(3px);
+    @include border-radius(3px);
 
-        &:hover {
-            background-color: #666;
-        }
+    &:hover {
+        background-color: #666;
+    }
+}
+
+.mhwc-list {
+    overflow-y: scroll;
+
+    &::-webkit-scrollbar {
+        width: 5px;
+        height: 5px;
+    }
+
+    &::-webkit-scrollbar-thumb {
+        background: rgba(0, 0, 0, 0.1);
     }
 }
 
@@ -190,8 +201,6 @@ $function_bar-height: 40px;
         }
     }
 
-    @include mhwc-icon();
-
     .mhwc-list {
         position: absolute;
         top: 10px + $function_bar-height;
@@ -199,7 +208,6 @@ $function_bar-height: 40px;
         right: 5px;
         bottom: 10px;
         padding: 0 5px;
-        overflow-y: scroll;
 
         table {
             width: 100%;
@@ -287,21 +295,11 @@ $function_bar-height: 40px;
                 }
             }
 
-            @include mhwc-sharpness();
-
-            .mhwc-bar {
-                height: 15px;
+            .mhwc-sharpness {
+                .mhwc-bar {
+                    height: 15px;
+                }
             }
-        }
-
-        &::-webkit-scrollbar {
-            width: 5px;
-            height: 5px;
-            background: white;
-        }
-
-        &::-webkit-scrollbar-thumb {
-            background: rgba(0, 0, 0, 0.1);
         }
     }
 }
@@ -333,26 +331,13 @@ $function_bar-height: 40px;
     > .mhwc-equips,
     > .mhwc-status {
         .mhwc-list {
-            overflow-y: scroll;
             height: calc(100vh - (#{$header-height} + #{$footer-height} + #{$section_name-height}));
-
-            &::-webkit-scrollbar {
-                width: 5px;
-                height: 5px;
-                background: white;
-            }
-
-            &::-webkit-scrollbar-thumb {
-                background: rgba(0, 0, 0, 0.1);
-            }
         }
     }
 
     > .mhwc-equips,
     > .mhwc-status {
         .mhwc-sharpness {
-            @include mhwc-sharpness();
-
             .mhwc-bar {
                 height: 21px;
             }
@@ -377,7 +362,7 @@ $function_bar-height: 40px;
                 width: 100%;
                 height: 35px;
                 line-height: 35px;
-                border: 1px solid #333;
+                border: 1px solid #999;
                 text-align: center;
 
                 @include border-radius(5px);
@@ -389,31 +374,19 @@ $function_bar-height: 40px;
         }
 
         .mhwc-list {
-            overflow-y: scroll;
             height: calc(100vh - (#{$header-height} + #{$footer-height} + #{$section_name-height} + #{$function_bar-height}));
-
-            &::-webkit-scrollbar {
-                width: 5px;
-                height: 5px;
-                background: white;
-            }
-
-            &::-webkit-scrollbar-thumb {
-                background: rgba(0, 0, 0, 0.1);
-            }
         }
 
         .mhwc-item {
-            margin: 5px 5px 5px 10px;
-            padding: 5px;
-            border: 1px solid #333;
+            margin: 5px 5px 10px 10px;
+            padding: 5px 5px 15px 5px;
+            border: 1px solid #999;
+            background-color: #eee;
 
             @include border-radius(5px);
 
             .mhwc-name {
                 line-height: 33px;
-
-                @include mhwc-icon();
 
                 .mhwc-icons_bundle {
                     float: right;
@@ -426,7 +399,8 @@ $function_bar-height: 40px;
 
             .mhwc-value {
                 padding: 5px;
-                border: 1px solid #333;
+                border: 1px solid #999;
+                background-color: white;
 
                 @include border-radius(5px);
             }
@@ -449,12 +423,11 @@ $function_bar-height: 40px;
             }
         }
 
-        @include mhwc-icon();
-
         .mhwc-equip {
-            margin: 5px 5px 5px 10px;
-            padding: 5px;
-            border: 1px solid #333;
+            margin: 5px 5px 10px 10px;
+            padding: 5px 5px 15px 5px;
+            border: 1px solid #999;
+            background-color: #ccc;
 
             @include border-radius(5px);
 
@@ -468,7 +441,8 @@ $function_bar-height: 40px;
 
             .mhwc-value {
                 padding: 5px;
-                border: 1px solid #333;
+                border: 1px solid #999;
+                background-color: white;
 
                 @include border-radius(5px);
             }
@@ -477,7 +451,8 @@ $function_bar-height: 40px;
         .mhwc-item {
             margin-top: 5px;
             padding: 5px;
-            border: 1px solid #333;
+            border: 1px solid #999;
+            background-color: #eee;
 
             @include border-radius(5px);
 
@@ -493,7 +468,8 @@ $function_bar-height: 40px;
 
             .mhwc-value {
                 padding: 5px;
-                border: 1px solid #333;
+                border: 1px solid #999;
+                background-color: white;
 
                 @include border-radius(5px);
             }
@@ -529,12 +505,11 @@ $function_bar-height: 40px;
     }
 
     > .mhwc-status {
-        @include mhwc-icon();
-
         .mhwc-item {
-            margin: 5px 5px 5px 10px;
-            padding: 5px;
-            border: 1px solid #333;
+            margin: 5px 5px 10px 10px;
+            padding: 5px 5px 15px 5px;
+            border: 1px solid #999;
+            background-color: #eee;
 
             @include border-radius(5px);
 
@@ -550,7 +525,8 @@ $function_bar-height: 40px;
 
             .mhwc-value {
                 padding: 5px;
-                border: 1px solid #333;
+                border: 1px solid #999;
+                background-color: white;
 
                 @include border-radius(5px);
             }
