1. refactor fitting algor: add set equips 2. add set itme selector 3. update ui style 4. fix dataset

--- a/src/assets/styles/module/main.scss
+++ b/src/assets/styles/module/main.scss
@@ -281,7 +281,6 @@ $function_bar-height: 40px;
             }
 
             &.mhwc-enhance_table {
-
                 td:nth-child(4) {
                     padding-right: 5px;
                     text-align: right;
@@ -290,6 +289,13 @@ $function_bar-height: 40px;
 
             &.mhwc-skill_table {
                 td:nth-child(4) {
+                    padding-right: 5px;
+                    text-align: right;
+                }
+            }
+
+            &.mhwc-set_table {
+                td:nth-child(3) {
                     padding-right: 5px;
                     text-align: right;
                 }
@@ -346,15 +352,11 @@ $function_bar-height: 40px;
 
     > .mhwc-skills {
         .mhwc-function_bar {
-            padding: 5px 5px;
+            padding: 5px 2.5px;
             height: $function_bar-height;
 
-            div:nth-child(1) {
-                padding-right: 2.5px;
-            }
-
-            div:nth-child(2) {
-                padding-left: 2.5px;
+            div {
+                padding: 0 2.5px;
             }
 
             a {
