1. update gh pages 2. update candidate bundles ui

--- a/src/assets/styles/module/main.scss
+++ b/src/assets/styles/module/main.scss
@@ -445,6 +445,17 @@ $panel-height: 40px;
                 line-height: 28px;
 
                 @include border-radius(5px);
+
+                input {
+                    margin: 0 5px;
+                    padding: 0 5px;
+                    height: 21px;
+                    width: 50px;
+                    line-height: 21px;
+                    border: 1px solid #333;
+
+                    @include border-radius(5px);
+                }
             }
         }
 
